--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			<nav><!-- Início nav -->
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="../DalekShop/pages/shop.html">SHOP</a></li>
-			        <li><a href="../DalekShop/pages/carrinho.html">Carrinho</a></li>
-			        <li><a href="../DalekShop/pages/blog.html">BLOG</a></li>
-			        <li><a href="../DalekShop/pages/contato.html">contato</a></li>
+					<li><a href="shop.html">SHOP</a></li>
+			        <li><a href="carrinho.html">Carrinho</a></li>
+			        <li><a href="blog.html">BLOG</a></li>
+			        <li><a href="contato.html">contato</a></li>
 				</ul>
 			</nav><!--/fim nav -->
 			<div id="social">
@@ -50,7 +50,7 @@
 			
 			<div id="conteudo"><!-- Início conteudo -->
 				<section class="capa">
-					<a href="../DalekShop/pages/shop2.html">
+					<a href="shop2.html">
 					<img class='foto' src="img/bannercomprar1.png" alt="banner principal de anuncio"> 
 				</a>
 
@@ -68,7 +68,7 @@
 						<article id="blog">
 							<h3>Blog</h3>
 							<ul>
-								<li><a href="../DalekShop/pages/blog2.html">Resenha: The Power of the Doctor</a></li>
+								<li><a href="blog2.html">Resenha: The Power of the Doctor</a></li>
 									<li><a href="#">BBC e Disney unem forças com Doctor Who</a></li>
 									<li><a href="#">A entrevista de despedida de Jodie Whittaker</a></li>
 									<li><a href="#">Quem são Ace e Tegan?</a></li>
@@ -160,7 +160,7 @@
 	
 
 			<footer>
-				<img src="../DalekShop/img/logo-dark.min.png" alt="Logo oficial de Doctor Who">
+				<img src="../img/logo-dark.min.png" alt="Logo oficial de Doctor Who">
 				<p>
 					<a href="#">Home</a>
 					<a href="#">Shop</a>
